--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
+    "target": "es6",
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
