perf: configure whether logging is enabled

--- a/packages/js-sdk/.env.example
+++ b/packages/js-sdk/.env.example
@@ -2,5 +2,8 @@
 BROWSER_STACK_USERNAME=yaroslavpohranic_qvQ7tE
 BROWSER_STACK_ACCESS=GtWC338Th56ec6jquWsZ
 
+# Logger
+ENABLE_LOGGING=1
+
 # Docs Sever
 PORT=3002
