--- a/packages/js-sdk/package.json
+++ b/packages/js-sdk/package.json
@@ -60,13 +60,12 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@types/chai": "^4.3.1",
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "assert": "^2.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -79,6 +78,7 @@
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-local-rules": "^1.3.2",
     "eslint-plugin-mocha": "^10.0.4",
     "eslint-plugin-prettier": "^4.0.0",
     "istanbul-cobertura-badger": "^1.3.1",
@@ -101,12 +101,13 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-jsdoc": "^0.1.2",
+    "rollup-plugin-modify": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "serve": "^14.2.0",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
