--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -46,16 +46,18 @@
     "@types/chai": "^4.3.1",
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "assert": "^2.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.3.6",
     "chai-string": "^1.5.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-local-rules": "^1.3.2",
     "eslint-plugin-mocha": "^10.0.4",
     "eslint-plugin-prettier": "^4.0.0",
     "istanbul-cobertura-badger": "^1.3.1",
@@ -65,11 +67,12 @@
     "require": "^2.4.20",
     "rollup": "^3.20.2",
     "rollup-plugin-generate-package-json": "^3.2.0",
+    "rollup-plugin-modify": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
