--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 node_modules/
 *.log
 .vscode
+
+# yarn
+.pnp.*
 .yarn/*
+!.yarn/patches
+!.yarn/plugins
 !.yarn/releases
+!.yarn/sdks
+!.yarn/versions
