--- a/packages/js-sdk/package.json
+++ b/packages/js-sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@convertcom/js-sdk",
+  "name": "@mattddean-oss/convertcom-js-sdk",
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
@@ -41,17 +41,17 @@
     "node": ">=8.0.0"
   },
   "peerDependencies": {
-    "@convertcom/js-sdk-api": "1.0.0",
-    "@convertcom/js-sdk-bucketing": "1.0.0",
-    "@convertcom/js-sdk-data": "1.0.0",
-    "@convertcom/js-sdk-enums": "1.0.0",
-    "@convertcom/js-sdk-event": "1.0.0",
-    "@convertcom/js-sdk-experience": "1.0.0",
-    "@convertcom/js-sdk-logger": "1.0.0",
-    "@convertcom/js-sdk-rules": "1.0.0",
-    "@convertcom/js-sdk-segments": "1.0.0",
-    "@convertcom/js-sdk-types": "1.0.0",
-    "@convertcom/js-sdk-utils": "1.0.0"
+    "@mattddean-oss/convertcom-js-sdk-api": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-bucketing": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-data": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-enums": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-event": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-experience": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-logger": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-rules": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-segments": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-types": "1.0.0",
+    "@mattddean-oss/convertcom-js-sdk-utils": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -111,5 +111,5 @@
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
-  "version": "1.2.0"
+  "version": "1.3.0-canary.0"
 }
