--- a/packages/demo-react/package.json
+++ b/packages/demo-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@convertcom/js-sdk-demo-react",
+  "name": "@mattddean-oss/convertcom-js-sdk-demo-react",
   "version": "1.0.0",
   "author": "Convert Insights, Inc",
   "license": "Apache-2.0",
@@ -16,7 +16,7 @@
     "twin.macro": "^3.0.0-rc.4"
   },
   "peerDependencies": {
-    "@convertcom/js-sdk": "1.0.0"
+    "@mattddean-oss/convertcom-js-sdk": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
