--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@convertcom/js-sdk-utils",
+  "name": "@mattddean-oss/convertcom-js-sdk-utils",
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
@@ -32,7 +32,7 @@
     "node": ">=8.0.0"
   },
   "peerDependencies": {
-    "@convertcom/js-sdk-enums": "1.0.0"
+    "@mattddean-oss/convertcom-js-sdk-enums": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -70,5 +70,5 @@
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
-  "version": "1.0.0"
+  "version": "1.3.0-canary.0"
 }
