--- a/packages/js-sdk/package.json
+++ b/packages/js-sdk/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
   "browser": "lib/index.umd.min.js",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/js-sdk/index.d.ts",
   "files": [
     "lib/**/**/*"
   ],
@@ -41,17 +41,17 @@
     "node": ">=8.0.0"
   },
   "peerDependencies": {
-    "@mattddean-oss/convertcom-js-sdk-api": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-bucketing": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-data": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-enums": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-event": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-experience": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-logger": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-rules": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-segments": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-types": "1.3.0-canary.2",
-    "@mattddean-oss/convertcom-js-sdk-utils": "1.3.0-canary.2"
+    "@mattddean-oss/convertcom-js-sdk-api": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-bucketing": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-data": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-enums": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-event": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-experience": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-logger": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-rules": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-segments": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-types": "1.3.0-canary.3",
+    "@mattddean-oss/convertcom-js-sdk-utils": "1.3.0-canary.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -111,5 +111,5 @@
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
-  "version": "1.3.0-canary.2"
+  "version": "1.3.0-canary.3"
 }
