--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/utils/index.d.ts",
   "files": [
     "lib/**/**/*"
   ],
