--- a/packages/enums/package.json
+++ b/packages/enums/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
-  "types": "./lib/enums/index.d.ts",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib/**/**/*"
   ],
@@ -50,5 +50,5 @@
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
-  "version": "1.3.0-canary.3"
+  "version": "1.3.0-canary.4"
 }
