--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
-  "types": "./lib/types/index.d.ts",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib/**/**/*"
   ],
@@ -26,7 +26,7 @@
     "node": ">=8.0.0"
   },
   "peerDependencies": {
-    "@mattddean-oss/convertcom-js-sdk-enums": "1.3.0-canary.3"
+    "@mattddean-oss/convertcom-js-sdk-enums": "1.3.0-canary.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -53,5 +53,5 @@
     "typings": "^2.1.1",
     "webpack": "^5.72.1"
   },
-  "version": "1.3.0-canary.3"
+  "version": "1.3.0-canary.4"
 }
